# fastapi-template

./: .dockerignore  .gitignore  LICENSE  README.md  alembic.ini  bandit.yaml  docker-compose.yml  dockerfile  mypy.ini  pyproject.toml  ruff.toml
src/: main.py  settings.py
src/application/contracts/: i_hash_service.py
src/application/domain/enums/: __init__.py  status_code.py
src/application/domain/exceptions/: __init__.py  base.py  immutable_attribute_error.py  incomparable_object_error.py  sealed_class_error.py
src/application/domain/objects/: immutable.py  incomparable.py  sealed.py
src/infrastructure/database/: context.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/models/: __init__.py  base.py
src/infrastructure/logger/: __init__.py  log_format.py  log_levels.py  logger.py
src/infrastructure/utils/: hash.py  retry.py
src/presentation/handlers/: __init__.py  immutable_attribute_error_handler.py  incomparable_object_error_handler.py  sealed_class_error_handler.py
src/presentation/middleware/: timing.py  trace_id.py
