[project]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Noloquideus",email = "daniilmanukian@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "alembic (>=1.16.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.codestyle.dependencies]
ruff = "^0.12.5"
ty = "^0.0.1a16"
bandit = "^1.8.6"
mypy = "^1.17.0"

